--- a/index.html
+++ b/index.html
@@ -1,12 +1,269 @@
 <!DOCTYPE html>
+<!--
+	Transit by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<title>Transit by TEMPLATED</title>
+	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-layers.min.js"></script>
+	<script src="js/init.js"></script>
+	<noscript>
+		<link rel="stylesheet" href="css/skel.css" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/style-xlarge.css" />
+	</noscript>
+
+	<script src="js/custom.js"></script>	
+	<script src="js/loadtable.js"></script>
+	<!-- <style>@import url(http://fonts.googleapis.com/earlyaccess/notosanstc.css);</style> style="font-family: 'Noto Sans TC', sans-serif !important; "-->
 </head>
-<body>
-    雞腿bang當
+
+<body class="landing">
+
+	<!-- Header -->
+	<header id="header">
+		<h1>
+			<a href="index.html">E-ticket</a>
+		</h1>
+		<nav id="nav">
+			<ul>
+				<!-- <li><a href="index.html">Home</a></li> -->
+				<!-- <li><a href="generic.html">Generic</a></li>
+						<li><a href="elements.html">Elements</a></li> -->
+				<li>
+					<a href="">Membership</a>
+				</li>
+				<!-- <li><a href="">查票?</a></li> -->
+				<!-- <li><a href=".php">Inbox</a></li> -->
+				<li>
+					<a href="my_cart.php">Cart</a>
+				</li>
+				<li>
+					<a href="login.html" class="button special" id="loginbuttom">Sign Up</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
+
+	<!-- Banner -->
+	<section id="banner">
+		<h2>Entertainment park e-ticket</h2>
+		<p>Book easy, play hard.</p>
+		<ul class="actions">
+			<li>
+				<a href="#one" class="button big">check it now!</a>
+			</li>
+		</ul>
+	</section>
+
+	<!-- One -->
+	<section id="one" class="wrapper style1 special">
+		<div class="container">
+			<header class="major">
+				<h2>Tickets</h2>
+				<p>three park, three place, three kind of playing.</p>
+			</header>
+			<div class="row 150%" >
+				<div class="4u 12u$(medium)">
+					<section class="box">
+						<i class="icon big rounded color1 fa-cloud"></i>
+						<h3>九族文化村</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
+<div id="tableOne"></div>				
+					</section>
+				</div>
+				<div class="4u 12u$(medium)">
+					<section class="box">
+						<i class="icon big rounded color9 fa-desktop"></i>
+						<h3>六福村</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ullam consequatur repellat debitis maxime.</p>
+<div id="tableTwo"></div>
+					</section>
+				</div>
+				<div class="4u$ 12u$(medium)">
+					<section class="box">
+						<!-- <i class="icon big rounded color6 fa-rocket"></i> -->
+						<img src="img/test.jpg" class="icon big rounded ">
+						<h3>劍湖山</h3>
+						<p>he he he.</p>
+<div id="tableThree"></div>	
+					</section>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Two -->
+	<!-- <section id="two" class="wrapper style2 special">
+				<div class="container">
+					<header class="major">
+						<h2>Lorem ipsum dolor sit</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio, autem.</p>
+					</header>
+					<section class="profiles">
+						<div class="row">
+							<section class="3u 6u(medium) 12u$(xsmall) profile">
+								<img src="img/profile_placeholder.gif" alt="" />
+								<h4>Lorem ipsum</h4>
+								<p>Lorem ipsum dolor</p>
+							</section>
+							<section class="3u 6u$(medium) 12u$(xsmall) profile">
+								<img src="img/profile_placeholder.gif" alt="" />
+								<h4>Voluptatem dolores</h4>
+								<p>Ullam nihil repudi</p>
+							</section>
+							<section class="3u 6u(medium) 12u$(xsmall) profile">
+								<img src="img/profile_placeholder.gif" alt="" />
+								<h4>Doloremque quo</h4>
+								<p>Harum corrupti quia</p>
+							</section>
+							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
+								<img src="img/profile_placeholder.gif" alt="" />
+								<h4>Voluptatem dicta</h4>
+								<p>Et natus sapiente</p>
+							</section>
+						</div>
+					</section>
+					<footer>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam dolore illum, temporibus veritatis eligendi, aliquam, dolor enim itaque veniam aut eaque sequi qui quia vitae pariatur repudiandae ab dignissimos ex!</p>
+						<ul class="actions">
+							<li>
+								<a href="#" class="button big">Lorem ipsum dolor sit</a>
+							</li>
+						</ul>
+					</footer>
+				</div>
+			</section> -->
+
+	<!-- Three -->
+	<!-- <section id="three" class="wrapper style3 special">
+		<div class="container">
+			<header class="major">
+				<h2>Consectetur adipisicing elit</h2>
+				<p>Lorem ipsum dolor sit amet. Delectus consequatur, similique quia!</p>
+			</header>
+		</div>
+		<div class="container 50%">
+			<form action="#" method="post">
+				<div class="row uniform">
+					<div class="6u 12u$(small)">
+						<input name="name" id="name" value="" placeholder="Name" type="text">
+					</div>
+					<div class="6u$ 12u$(small)">
+						<input name="email" id="email" value="" placeholder="Email" type="email">
+					</div>
+					<div class="12u$">
+						<textarea name="message" id="message" placeholder="Message" rows="6"></textarea>
+					</div>
+					<div class="12u$">
+						<ul class="actions">
+							<li>
+								<input value="Send Message" class="special big" type="submit">
+							</li>
+						</ul>
+					</div>
+				</div>
+			</form>
+		</div>
+	</section> -->
+
+	<!-- Footer -->
+	<footer id="footer">
+		<div class="container">
+			<!-- <section class="links">
+						<div class="row">
+							<section class="3u 6u(medium) 12u$(small)">
+								<h3>Lorem ipsum dolor</h3>
+								<ul class="unstyled">
+									<li><a href="#">Lorem ipsum dolor sit</a></li>
+									<li><a href="#">Nesciunt itaque, alias possimus</a></li>
+									<li><a href="#">Optio rerum beatae autem</a></li>
+									<li><a href="#">Nostrum nemo dolorum facilis</a></li>
+									<li><a href="#">Quo fugit dolor totam</a></li>
+								</ul>
+							</section>
+							<section class="3u 6u$(medium) 12u$(small)">
+								<h3>Culpa quia, nesciunt</h3>
+								<ul class="unstyled">
+									<li><a href="#">Lorem ipsum dolor sit</a></li>
+									<li><a href="#">Reiciendis dicta laboriosam enim</a></li>
+									<li><a href="#">Corporis, non aut rerum</a></li>
+									<li><a href="#">Laboriosam nulla voluptas, harum</a></li>
+									<li><a href="#">Facere eligendi, inventore dolor</a></li>
+								</ul>
+							</section>
+							<section class="3u 6u(medium) 12u$(small)">
+								<h3>Neque, dolore, facere</h3>
+								<ul class="unstyled">
+									<li><a href="#">Lorem ipsum dolor sit</a></li>
+									<li><a href="#">Distinctio, inventore quidem nesciunt</a></li>
+									<li><a href="#">Explicabo inventore itaque autem</a></li>
+									<li><a href="#">Aperiam harum, sint quibusdam</a></li>
+									<li><a href="#">Labore excepturi assumenda</a></li>
+								</ul>
+							</section>
+							<section class="3u$ 6u$(medium) 12u$(small)">
+								<h3>Illum, tempori, saepe</h3>
+								<ul class="unstyled">
+									<li><a href="#">Lorem ipsum dolor sit</a></li>
+									<li><a href="#">Recusandae, culpa necessita nam</a></li>
+									<li><a href="#">Cupiditate, debitis adipisci blandi</a></li>
+									<li><a href="#">Tempore nam, enim quia</a></li>
+									<li><a href="#">Explicabo molestiae dolor labore</a></li>
+								</ul>
+							</section>
+						</div>
+					</section> -->
+			<div class="row">
+				<div class="8u 12u$(medium)">
+					<ul class="copyright">
+						<li>&copy; WebDesign_Team03. All rights reserved.</li>
+						<li>Design:
+							<a href="http://templated.co">TEMPLATED</a>
+						</li>
+						<li>Images:
+							<a href="http://unsplash.com">Unsplash</a>
+						</li>
+					</ul>
+				</div>
+				<div class="4u$ 12u$(medium)">
+					<ul class="icons">
+						<li>
+							<a class="icon rounded fa-facebook">
+								<span class="label">Facebook</span>
+							</a>
+						</li>
+						<li>
+							<a class="icon rounded fa-twitter">
+								<span class="label">Twitter</span>
+							</a>
+						</li>
+						<li>
+							<a class="icon rounded fa-google-plus">
+								<span class="label">Google+</span>
+							</a>
+						</li>
+						<li>
+							<a class="icon rounded fa-linkedin">
+								<span class="label">LinkedIn</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 </body>
+
 </html>
